Added Routes and Signup API for Vendor
